--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11888,6 +11888,66 @@
 	<p>Le verbe est généralement à un temps secondaire (2<sup>e</sup> et 3<sup>e</sup> prés. et fut., 2<sup>e</sup> parfait).</p>
 	<p><i>1. Par le ton de la voix.</i></p>
 	<p>L'interrogation n'est indiquée par aucune particule; elle se reconnaît seulement d'après le contexte:</p>
+	<p><em>ⲛ̀ⲑⲟⲕ ⲡⲉ ⲡⲟⲩⲣⲟ ⲛ̀ⲧⲉ ⲛⲓⲓⲟⲩⲇⲁⲓ</em> «tu es le roi des Juifs?»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲛⲉ ⲡⲉⲧⲥϣⲉ ⲁⲛ ⲉⲃⲟⲗⲥ</em> «ne fallait-il pas la délier?»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲉⲕⲛⲁϩⲉⲙⲥⲓ ⲛ̀ⲁⲧϣⲗⲏⲗ</em> «tu resteras sans prier?»<sup class="footnote">3</sup>.</p>
+	<p>Pour l'interrogation au 2<sup>e</sup> présent, voir 237; au 2<sup>e</sup> futur, voir 240, 2.</p>
+	<p><i>2. Interrogation au moyen d'adverbes.</i></p>
+	<p>1. <em>ⲑⲱⲛ</em> (Ṣ. <em>ⲧⲱⲛ</em>) «où?» sans mouvement; <em>ⲉⲑⲱⲛ</em> «où?» avec mouvement; <em>ⲉⲃⲟⲗ ⲑⲱⲛ</em> «d'où?».</p>
+	<p class="footnote">1. Luc 23, 3.</p>
+	<p class="footnote">2. Luc 13, 16.</p>
+	<p class="footnote">3. MS. 423.</p>
+	<p><em>ⲑⲱⲛ</em> s'emploie au 2<sup>e</sup> présent; le sujet vient au second rang sans <em>ⲛ̀ϫⲉ</em>:</p>
+	<p><em>ⲁⲩⲑⲱⲛ ⲛⲏ ⲉⲧⲁⲩϯϩⲁⲡ ⲉⲣⲟ</em> «où sont ceux qui t'accusaient?».</p>
+	<p><em>ⲛ̀ⲑⲟⲕ ⲟⲩⲉⲃⲟⲗ ⲑⲱⲛ</em> «d'où es-tu?»<sup class="footnote">1</sup>.</p>
+	<p>2. <em>ⲁⲛ</em> (Ṣ. <em>ⲉⲛ</em>) «est-ce que?». Cette particule se distingue de la négation <em>ⲁⲛ</em> en ce qu'elle commence toujours la proposition tandis que <em>ⲁⲛ</em> négatif est toujours au second rang.</p>
+	<p><em>ⲁⲛ</em> interrogatif s'emploie surtout dans la proposition nominale:</p>
+	<p><em>ⲁⲛ ⲫⲁⲓ ⲁⲛ ⲡⲉ ⲡⲓⲥⲁϫⲓ ⲉⲧⲁⲛϫⲟϥ ⲛⲁⲕ</em> «n'est-ce pas ce que nous t'avions dit?»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲁⲛ ⲟⲩⲟⲛϣϫⲟⲙ ⲛ̀ⲧⲉ ⲟⲩⲁⲅⲁⲑⲟⲛ ϣⲱⲡⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲁⲍⲁⲣⲉⲑ</em> «peut-il sortir quelque chose de bon de Nazareth?»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲁⲛ ⲧⲉⲣⲁϣⲉ ⲛⲉ ⲛⲉⲙ ⲡⲁⲓⲣⲱⲙⲓ</em> «t'en iras-tu avec cet homme?»<sup class="footnote">4</sup>.</p>
+	<p>3. <em>ⲙⲏ</em> (<em>μή</em>), employé dans une proposition négative, suppose la réponse affirmative, et, dans une proposition affirmative, la réponse négative:</p>
+	<p><em>ⲙⲏ ⲧϫⲓϫ ⲙ̀ⲡϭⲟⲓⲥ ⲛⲁⲣⲁϣⲟⲩ ⲁⲛ</em> «est-ce que la main du Seigneur ne leur suffira pas?»<sup class="footnote">5</sup>.</p>
+	<p><em>ⲙⲏ ϯⲯⲩⲭⲏ ⲟⲩⲟⲧ ⲁⲛ ⲉ ϯϧⲣⲉ</em> «est-ce que l'âme n'est pas supérieure à la nourriture?»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲙⲏ ⲁⲛⲟⲕ ⲡⲟⲩⲣⲓⲧ ⲙ̀ⲡⲁⲥⲟⲛ</em> «suis-je le gardien de mon frère?»<sup class="footnote">7</sup>.</p>
+	<p class="footnote">1. Jean 19, 9.</p>
+	<p class="footnote">2. Ex. 14, 12.</p>
+	<p class="footnote">3. Jean 1, 47.</p>
+	<p class="footnote">4. Gen. 24, 58.</p>
+	<p class="footnote">5. Nomb. 11, 23.</p>
+	<p class="footnote">6. Mt. 6, 25.</p>
+	<p class="footnote">7. Gen. 4, 9.</p>
+	<p><em>ⲙⲏ ⲛⲓⲉⲥⲱⲟⲩ ⲛⲉⲙ ⲛⲓⲉϩⲱⲟⲩ ⲁⲩϣⲁⲛϧⲉⲗϧⲱⲗⲟⲩ ⲙⲏ ⲥⲉⲛⲁⲣⲁϣⲟⲩ</em> «est-ce que les moutons et les bœufs, si on les égorge, leur suffiront?»<sup class="footnote">1</sup>.</p>
+	<p>Pour l'interrogation avec condition, voir 345.</p>
+	<p><i>3. Double interrogation.</i></p>
+	<p>Dans la double interrogation la seconde partie est introduite par <em>ϣⲁⲛ</em> «ou bien»:</p>
+	<p><em>ⲟⲩ ⲉⲃⲟⲗ ϧⲉⲛ ⲧⲫⲉ ⲡⲉ ϣⲁⲛ ⲟⲩ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲓⲣⲱⲙⲓ ⲡⲉ</em> «vient-il du ciel ou des hommes?»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲉⲩϭⲓⲧⲉⲗⲟⲥ ⲛ̀ⲧⲉ ⲛⲓⲙ ⲓⲉ ⲕⲏⲛⲥⲟⲥ ⲛ̀ⲧⲟⲧⲟⲩ ⲛ̀ⲛⲓϣⲏⲣⲓ ϣⲁⲛ ⲛ̀ⲧⲟⲧⲟⲩ ⲛ̀ⲛⲓϣⲉⲙⲙⲱⲟⲩ</em> «par qui se font-ils payer le tribut ou le cens? Par leurs enfants ou par les étrangers?»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲛ̀ⲑⲟⲕ ⲡⲉ ⲫⲏ ⲉⲑⲛⲏⲟⲩ ϣⲁⲛ ⲛ̀ⲧⲉⲛϫⲟⲩϣⲧ ⲉⲃⲟⲗ ϧⲁϫⲱϥ ⲛ̀ⲕⲉⲟⲩⲁⲓ</em> «es-tu celui qui doit venir ou devons-nous en attendre un autre?»<sup class="footnote">4</sup>.</p>
+	<p>Lorsque le premier membre est précédé de <em>ⲁⲛ</em>, le second peut l'être aussi:</p>
+	<p><em>ⲁⲛ ϥϫⲟⲣ ⲓⲉ ⲁⲛ ⲟⲩϫⲱⲃ ⲡⲉ ⲓⲉ ⲁⲛ ⲟⲩⲕⲟⲩϫⲓ ⲡⲉ ⲓⲉ ⲁⲛ ⲟⲩⲛⲓϣϯ ⲡⲉ</em> «est-il fort ou faible? est-il petit ou grand?»<sup class="footnote">5</sup>.</p>
+	<p>«Ou non, <em>ام لا</em>» se traduit par <em>ϣⲁⲛ ⲙ̀ⲙⲟⲛ</em>:</p>
+	<p><em>ⲁⲛ ⲡϭⲟⲓⲥ ϣⲟⲡ ⲛ̀ϧⲏⲧⲉⲛ ϣⲁⲛ ⲙ̀ⲙⲟⲛ</em> «le Seigneur est-il parmi vous, ou non?»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲥϣⲉ ⲉ ϯϩⲱϯ ⲙ̀ⲡⲟⲩⲣⲟ ϣⲁⲛ ⲙ̀ⲙⲟⲛ</em> «faut-il payer le tribut au roi, ou non?»<sup class="footnote">7</sup>.</p>
+	<p class="footnote">1. Nomb. 11, 22.</p>
+	<p class="footnote">2. Mt. 21, 25.</p>
+	<p class="footnote">3. Mt. 17, 25.</p>
+	<p class="footnote">4. Mt. 11, 3.</p>
+	<p class="footnote">5. Nomb. 13, 18.</p>
+	<p class="footnote">6. Ex. 17, 7.</p>
+	<p class="footnote">7. Mt. 22, 17.</p>
+	<p><i>4. Interrogation indirecte.</i></p>
+	<p>L'interrogation indirecte est indiquée par <em>ϫⲉ</em>; pour le reste elle ressemble à l'interrogation directe:</p>
+	<p><em>ⲭⲁϥ ⲛ̀ⲧⲉⲛⲛⲁⲩ ϫⲉ ϥⲛⲏⲟⲩ ⲛ̀ϫⲉ ⲏⲗⲓⲁⲥ ⲛⲧⲉϥⲛⲁϩⲙⲉϥ</em> «laisse-le, voyons si Elie viendra le sauver»<sup class="footnote">1</sup>.</p>
+	<p><em>ϣⲉⲛ ⲛⲏ ⲉⲧⲁⲩⲥⲱⲧⲉⲙ ϫⲉ ⲟⲩ ⲡⲉⲧⲁⲓϫⲟϥ ⲛⲱⲟⲩ</em> «interroge ceux qui ont entendu ce que je leur ai dit»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲉⲡϫⲓⲛⲧⲁϭⲟⲛⲧⲟⲩ ϫⲉ ⲁⲛ ⲥⲉⲛⲁⲙⲟϣⲓ ⲛ̀ⲥⲁ ⲡⲁⲛⲟⲙⲟⲥ ϣⲁⲛ ⲙ̀ⲙⲟⲛ</em> «pour éprouver s'ils observeront ma loi ou non»<sup class="footnote">3</sup>.</p>
+	<p>On emploie l'interrogation indirecte après le verbe <em>ⲥⲱⲟⲩⲛ</em> «savoir», lors même que celui-ci a déjà un complément direct:</p>
+	<p><em>ⲛⲁⲩⲥⲱⲟⲩⲛ ⲙ̀ⲙⲟϥ ⲁⲛ ⲡⲉ ϫⲉ ⲟⲩ ⲡⲉ</em> «ils ne savaient pas ce que c'était»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲙ̀ⲡⲉⲕⲥⲟⲩⲱⲛⲧ ϫⲉ ⲁⲛⲟⲕ ⲛⲓⲙ</em> «tu ne sais pas qui je suis?»<sup class="footnote">5</sup>.</p>
+	<p class="footnote">1. Mt. 27, 49.</p>
+	<p class="footnote">2. Jean 18, 21.</p>
+	<p class="footnote">3. Ex. 16, 4.</p>
+	<p class="footnote">4. Ex. 16, 15.</p>
+	<p class="footnote">5. Kef. 416.</p>
 	</div>
 </div>
 	</body>
