--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11948,6 +11948,149 @@
 	<p class="footnote">3. Ex. 16, 4.</p>
 	<p class="footnote">4. Ex. 16, 15.</p>
 	<p class="footnote">5. Kef. 416.</p>
+	<p>Chapitre XX.</p>
+	<p>Proposition Relative.</p>
+	<p>La proposition relative est celle qui commence par un pronom relatif, que ce pronom soit sujet ou complément. Elle est très fréquente en copte. Elle peut être exprimée:</p>
+	<p>1. Au moyen des temps formés de <em>ⲉ ⲉⲣⲉ</em>.</p>
+	<p>2. Au moyen du relatif <em>ⲉⲧ ⲉⲧⲉ</em>.</p>
+	<p><em>ⲉ ⲉⲣⲉ</em> s'emploient avec un antécédent <i>indéterminé</i>, c.-à-d. qui n'a point d'article ou qui a l'article indéfini.</p>
+	<p><em>ⲉⲧ ⲉⲧⲉ</em> s'emploient avec un antécédent <i>déterminé</i> par l'article défini ou ses dérivés.</p>
+	<p>L'antécédent est un substantif ou un pronom démonstratif.</p>
+	<p>L'emploi de ces mots peut être résumé dans le schéma suivant:</p>
+	<table>
+		<tr>
+			<th></th><th>Ant. déterminé.</th><th>Ant. indéterminé.</th>
+		</tr>
+		<tr>
+			<td>Devant l'infinitif et le qualitatif:</td><td><em>ⲉⲧ- ⲉⲧ⸗</em></td><td><em>ⲉⲣⲉ- ⲉ⸗</em></td>
+		</tr>
+		<tr>
+			<td>Devant un nom, etc.:</td><td><em>ⲉⲧⲉ-</em></td><td><em>ⲉⲣⲉ- ⲉ-</em></td>
+		</tr>
+	</table>
+	<p><em>ⲉ-</em> s'emploie avec la copule <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em>, quelquefois avec <em>ⲟⲩⲟⲛ ⲙ̀ⲙⲟⲛ</em>, jamais avec le verbe.</p>
+	<p><em>ⲉⲣⲉ-</em> s'emploie aussi avec <em>ⲟⲩⲟⲛ ⲙ̀ⲙⲟⲛ</em> ou avec le verbe, mais jamais avec <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em>.</p>
+	<p>La proposition relative peut être verbale ou nominale .</p>
+	<p><i>Verbale:</i></p>
+	<p><em>ⲫⲏ ⲉ-ⲧⲉⲛⲥⲱⲟⲩⲛ ⲙ̀ⲙⲟϥ ⲧⲉⲛⲥⲁϫⲓ ⲙ̀ⲙⲟϥ</em> «ce que nous savons, nous le disons»<sup class="footnote">1</sup>.</p>
+	<p><i>Nominale:</i></p>
+	<p><em>ⲡⲉⲛⲓⲱⲧ ⲉⲧ-ϧⲉⲛ ⲛⲓⲫⲏⲟⲩⲓ</em> «notre Père qui êtes aux cieux».</p>
+	<p>La syntaxe de ces deux propositions est la même. Nous allons en donner des exemples pour les principaux temps.</p>
+	<p><i>1. Indicatif présent.</i></p>
+	<p>Lorsque l'antécédent est indéterminé, on emploie <em>ⲉⲣⲉ- ⲉ⸗</em> c.-à-d. le 3<sup>e</sup> présent (238), <em>ⲉ</em> dans la prop. nominale:</p>
+	<p>Lorsque l'antécédent est déterminé, on emploie <em>ⲉⲧ ⲉⲧⲉ</em>, qui donne:</p>
+	<p>Avec les suffixes:</p>
+	<table>
+		<tr>
+			<th>Sing.</th><th></th><th>Pl.</th><th></th>
+		</tr>
+		<tr>
+			<td>1.</td><td><em>ⲉϯ</em></td><td>1.</td><td><em>ⲉⲧⲉⲛ</em></td>
+		</tr>
+		<tr>
+			<td>2 m.</td><td><em>ⲉⲧⲉⲕ</em></td><td>2.</td><td><em>ⲉⲧⲉⲧⲉⲛ</em></td>
+		</tr>
+		<tr>
+		<td>f.</td><td><em>ⲉⲧⲉ</em></td><td></td><td></td>
+		</tr>
+		<tr>
+			<td>3 m.</td><td><em>ⲉⲧⲉϥ</em></td><td>3.</td><td><em>ⲉⲧⲟⲩ</em></td>
+		</tr>
+		<tr>
+			<td>f.</td><td><em>ⲉⲧⲉⲥ</em></td><td></td><td></td>
+		</tr>
+	</table>
+	<p>Dans la proposition nominale: <em>ⲉⲧ- ⲉⲧⲉ-</em>.</p>
+	<p><i>Antécédent déterminé:</i></p>
+	<p><em>ⲛⲁⲓⲙⲏⲓⲛⲓ ⲉⲧⲉⲕ-ⲓⲣⲓ ⲙ̀ⲙⲱⲟⲩ</em> «ces prodiges que tu accomplis»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲫⲙⲁ ⲉϯϣⲟⲡ ⲙ̀ⲙⲟϥ</em> «le lieu où je suis»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲡⲓϣⲗⲟⲗ ⲉⲧⲉ ⲡϭⲟⲓⲥ ⲡⲉ ⲡⲉϥⲛⲟⲩϯ</em> «le peuple qui a le Seigneur pour Dieu»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲫⲏ ⲉⲧ-ϩⲉⲙⲥⲓ ϩⲓ ⲡⲑⲣⲟⲛⲟⲥ</em> «celui qui est assis sur le trône»<sup class="footnote">5</sup>.</p>
+	<p class="footnote">1. Jean 3, 11.</p>
+	<p class="footnote">2. Jean 3, 2.</p>
+	<p class="footnote">3. Jean 14, 3.</p>
+	<p class="footnote">4. Pr. 23, 12.</p>
+	<p class="footnote">5. Ex. 11, 5.</p>
+	<p><i>Antécédent indéterminé:</i></p>
+	<p><em>ⲟⲩⲣⲱⲙⲓ ⲉϥⲛⲏⲟⲩ ⲉⲡⲉⲥⲏⲧ</em> «un homme qui descend»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲟⲩⲣⲱⲙⲓ ⲉⲣⲉ ⲧⲉϥϫⲓϫ ϣⲟⲩⲱⲟⲩ</em> «un homme qui a la main desséchée»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲟⲩⲣⲱⲙⲓ ⲉ ⲡⲉϥⲣⲁⲛ ⲡⲉ ⲓⲱⲥⲏⲫ</em> «un homme qui s'appelle Joseph»<sup class="footnote">3</sup>.</p>
+	<p>Lorsque <em>ⲡⲉ</em> se trouve immédiatement devant <em>ⲉⲧ</em>, les deux <em>ⲉ</em> se contractent souvent en un seul:</p>
+	<p><em>ⲡϭⲟⲓⲥ ⲡⲉⲧϯ ⲛ̀ⲟⲩⲥⲟⲫⲓⲁ</em> «c'est le Seigneur qui donne la sagesse»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲛⲓⲙ ⲡⲉⲧⲁϥⲫⲉϧ ⲧⲉⲕϣⲑⲏⲛ</em> «qui a déchiré ta tunique?»<sup class="footnote">5</sup>.</p>
+	<p><em>ⲕⲉⲟⲩⲁⲓ ⲡⲉⲧⲥⲓϯ ⲟⲩⲟϩ ⲕⲉⲟⲩⲁⲓ ⲡⲉⲧⲱⲥϧ</em> «autre est celui qui sème, autre celui qui moissonne»<sup class="footnote">6</sup>.</p>
+	<p><i>2. Futur.</i></p>
+	<p>Le futur se forme de la même manière que le présent, il suffit d'ajouter <em>ⲛⲁ-</em> ou <em>ⲉ-</em> devant l'infinitif:</p>
+	<p><i>Antécédent déterminé:</i></p>
+	<p><em>ⲡⲓⲉⲑⲛⲟⲥ ⲉⲧⲟⲩⲛⲁⲉⲣⲃⲱⲕ ⲛⲁϥ</em> «la nation qu'ils serviront»<sup class="footnote">7</sup>.</p>
+	<p><em>ⲫⲏ ⲉⲧⲉ ⲡϭⲟⲓⲥ ⲛⲁⲧⲏⲓϥ ⲛⲱⲧⲉⲛ</em> «celui que le Seigneur vous donnera»<sup class="footnote">8</sup>.</p>
+	<p class="footnote">1. Luc 10, 30.</p>
+	<p class="footnote">2. Mc. 3, 1.</p>
+	<p class="footnote">3. Luc 1, 27.</p>
+	<p class="footnote">4. Pr. 2, 6.</p>
+	<p class="footnote">5. MS. 49.</p>
+	<p class="footnote">6. Jean 4, 37.</p>
+	<p class="footnote">7. Gen. 15, 14.</p>
+	<p class="footnote">8. Ex. 12, 25.</p>
+	<p><em>ⲡⲁⲓⲣⲏϯ ⲡⲉ ⲉⲧⲉⲕⲉ̀ⲁⲓϥ</em> «c'est ainsi que tu agiras»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲛⲏ ⲉⲧⲉϥⲉ̀ⲟⲩⲱⲙ ⲉⲃⲟⲗ ⲙ̀ⲙⲱⲟⲩ</em> «les choses dont il mangera»<sup class="footnote">2</sup>.</p>
+	<p><i>Antécédent indéterminé:</i></p>
+	<p><em>ⲟⲩⲟⲛ ⲟⲩⲙⲏϣ ⲉⲩⲛⲁϫⲟⲥ</em> «il y en a beaucoup qui diront»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲙ̀ⲙⲟⲛ ϩⲗⲓ ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ ⲉϥⲛⲁⲓ̀ ϩⲁⲣⲟⲛ</em> «il n'est personne sur la terre qui viendra à nous»<sup class="footnote">4</sup>.</p>
+	<p><i>3. Parfait.</i></p>
+	<p>Quand l'antécédent est déterminé, on emploie <em>ⲉⲧ</em> devant le 1<sup>e</sup> parfait (244); quand il est indéterminé, on emploie <em>ⲉ</em> devant le même temps. La 2 p. pl. déterminée est <em>ⲉⲧⲁⲣⲉⲧⲉⲛ</em>.</p>
+	<p><i>Antécédent déterminé:</i></p>
+	<p><em>ϧⲉⲛ ⲡⲓⲥⲏⲟⲩ ⲉⲧⲁ ⲡⲟⲩⲣⲟ ⲑⲉⲟⲇⲱⲥⲓⲟⲥ ⲟⲩⲱⲣⲡ ⲛ̀ⲥⲱⲓ</em> «au temps où le roi Théodose m'envoya chercher»<sup class="footnote">5</sup>.</p>
+	<p><em>ⲡⲁⲉⲥⲱⲟⲩ ⲉⲧⲁϥⲧⲁⲕⲟ</em> «mon mouton qui était perdu»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲁϥⲓ̀ ⲉ ⲡⲓⲙⲁ ⲉⲧⲁ ⲫⲛⲟⲩϯ ϫⲟⲥ ⲛⲁϥ</em> «il vint à l'endroit dont Dieu lui avait parlé»<sup class="footnote">7</sup>.</p>
+	<p><i>Antécédent indéterminé:</i></p>
+	<p><em>ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲥⲕⲉⲩⲟⲥ ⲉⲁϥⲧⲁⲕⲟ</em> «comme un vase qui a été brisé»<sup class="footnote">8</sup>.</p>
+	<p><em>ⲛⲉ ⲟⲩⲟⲛ ⲟⲩⲣⲱⲙⲓ ⲛ̀ⲛⲉⲃⲓⲟϩⲓ ⲉ ⲁϥϭⲟ ⲛ̀ⲟⲩⲓⲁϩⲁⲗⲟⲗⲓ</em> «il y avait un homme, maître d'un champ, qui avait planté une vigne»<sup class="footnote">9</sup>.</p>
+	<p class="footnote">1. Ex. 22, 30.</p>
+	<p class="footnote">2. Deut. 28, 55.</p>
+	<p class="footnote">3. Mt. 7, 22.</p>
+	<p class="footnote">4. Gen. 19, 31.</p>
+	<p class="footnote">5. Z. 28.</p>
+	<p class="footnote">6. Luc 15, 6.</p>
+	<p class="footnote">7. Gen. 22, 3.</p>
+	<p class="footnote">8. Ps. 30, 13.</p>
+	<p class="footnote">9. Mt. 21, 33.</p>
+	<p><i>4. Imparfait <em>ⲛⲁⲣⲉ</em>, présent d'habitude <em>ϣⲁⲣⲉ</em>.</i></p>
+	<p>On emploie <em>ⲉ</em> devant l'auxiliaire (<em>ⲛⲁⲣⲉ</em>, <em>ϣⲁⲣⲉ</em>) quelque soit l'antécédent; <em>ⲉⲧⲉ</em> ne s'emploie que lorsqu'il fait partie d'un relatif démonstratif (97, 99).</p>
+	<p><em>ⲡⲓⲙⲁ ⲉⲛⲁⲣⲉ ⲓⲱⲁⲛⲛⲏⲥ ϯⲱⲙⲥ ⲙ̀ⲙⲟϥ</em> «le lieu où Jean baptisait»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲛⲓⲙⲏⲓⲛⲓ ⲉⲛⲁϥⲓⲣⲓ ⲙ̀ⲙⲱⲟⲩ</em> «les prodiges qu'il faisait»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲛⲓⲣⲱⲙⲓ ⲉⲛⲁⲩ ϩⲓⲣⲉⲛ ⲫⲣⲟ ⲙ̀ⲡⲓⲏⲓ</em> «les hommes qui étaient à la porte de la maison»<sup class="footnote">3</sup>.</p>
+	<p><i>5. Proposition relative négative.</i></p>
+	<p>a) Avec <em>ⲛ̀ … ⲁⲛ</em>.</p>
+	<p>On emploie <em>ⲉⲧⲉ ⲛ̀ … ⲁⲛ</em> quand l'antécédent est déterminé, <em>ⲉ ⲛ̀ … ⲁⲛ</em> quand il est indéterminé.</p>
+	<p>Il arrive souvent que <em>ⲉ</em> se confond avec la voyelle de <em>ⲛ̀</em> et ne s'écrit pas; d'autres fois c'est <em>ⲛ̀</em> qui disparait.</p>
+	<p><i>Antécédent déterminé:</i></p>
+	<p><em>ⲡⲓⲫⲁϣ ⲉⲧⲉ ⲛ̀ⲥⲉⲥⲱⲟⲩⲛ ⲙ̀ⲙⲟϥ ⲁⲛ</em> «le filet qu'ils ne connaissent pas»<sup class="footnote">4</sup>.</p>
+	<p><i>Antécédent indéterminé:</i></p>
+	<p><em>ⲟⲩⲣⲱⲙⲓ ⲛ̀ϥϫⲉ ϩⲗⲓ ⲛ̀ⲥⲁϫⲓ ⲁⲛ ⲉϥⲉⲛϩⲟⲧ</em> «un homme qui ne dit rien de sûr»<sup class="footnote">5</sup>.</p>
+	<p>b) Avec les auxiliaires négatifs.</p>
+	<p>On emploie <em>ⲉⲧⲉ</em> quand l'antécédent est déterminé, <em>ⲉ</em> quand il est indéterminé; comme précédemment, <em>ⲉ</em> est souvent omis dans l'écriture:</p>
+	<p class="footnote">1. Jean 1, 28.</p>
+	<p class="footnote">2. Jean 2, 23.</p>
+	<p class="footnote">3. Gen. 19, 11.</p>
+	<p class="footnote">4. Ps. 34, 5.</p>
+	<p class="footnote">5. Pr. 2, 12.</p>
+	<p><em>ⲉⲧⲉ ⲙ̀ⲡⲁⲣⲉ</em>, <em>ⲉⲧⲉ ⲙ̀ⲡⲉ</em>, <em>ⲉⲧⲉ ⲙ̀ⲡⲁⲧⲉ</em>, ⲉⲧⲉ ⲛ̀ⲛⲉ;</p>
+	<p><em>ⲉⲙⲡⲁⲣⲉ</em> ou <em>ⲙ̀ⲡⲁⲣⲉ</em>, <em>ⲉⲙⲡⲉ</em> ou <em>ⲙ̀ⲡⲉ</em>, <em>ⲉⲙⲡⲁⲧⲉ</em> ou <em>ⲙ̀ⲡⲁⲧⲉ</em>.</p>
+	<p><i>Antécédent déterminé:</i></p>
+	<p><em>ⲡⲓⲙⲁ ⲉⲧⲉ ⲙ̀ⲡⲁⲣⲉ ⲣⲉϥϭⲓⲟⲩⲓ ϧⲱⲛⲧ ⲉⲣⲟϥ</em> «le lieu où n'approchent pas les voleurs»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲫⲏ ⲉⲧⲉ ⲛ̀ⲛⲟⲩϣⲟⲡϥ</em> «celui qu'ils ne recevront pas»<sup class="footnote">2</sup>.</p>
+	<p><i>Antécédent indéterminé:</i></p>
+	<p><em>ⲛⲉ ⲙ̀ⲙⲟⲛ ⲏⲓ ⲅⲁⲣ ⲡⲉ ⲙ̀ⲡⲉ ⲟⲩⲟⲛ ⲙⲟⲩ ⲛ̀ϧⲏⲧϥ</em> «il n'y avait pas de maison dans laquelle quelqu'un ne fût mort»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲟⲩⲡⲁⲣⲑⲉⲛⲟⲥ ⲙ̀ⲡⲉ ϩⲗⲓ ⲥⲟⲩⲱⲛⲥ</em> «une fille que personne ne connaît»<sup class="footnote">4</sup>.</p>
+	<p>Chapitre XXI.</p>
+	<p>Proposition Conditionnelle.</p>
+	<p>La proposition conditionnelle précède généralement la proposition principale dont elle dépend.</p>
+	<p>La condition peut être exprimée sans conjonction ou au moyen des conjonctions <em>ϣⲁⲛ</em>, <em>ⲉϣⲱⲡ</em>, <em>ⲓⲥϫⲉ</em>.</p>
+	<p class="footnote">1. Luc 12, 33.</p>
+	<p class="footnote">2. Gen. 32, 12.</p>
+	<p class="footnote">3. Ex. 12, 30.</p>
+	<p class="footnote">4. Gen. 24, 16.</p>
 	</div>
 </div>
 	</body>
