--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -12091,6 +12091,43 @@
 	<p class="footnote">2. Gen. 32, 12.</p>
 	<p class="footnote">3. Ex. 12, 30.</p>
 	<p class="footnote">4. Gen. 24, 16.</p>
+	<p><i>1. Sans conjonction.</i></p>
+	<p>Le 3<sup>e</sup> présent et le 3<sup>e</sup> futur peuvent parfois exprimer par eux-mêmes la condition:</p>
+	<p><em>ⲛ̀ⲑⲟⲕ ⲇⲉ ⲉⲕⲛⲁⲧⲱⲃϩ ⲙⲁϣⲉ ⲛⲁⲕ ⲉϧⲟⲩⲛ ⲉⲡⲉⲕⲧⲁⲙⲓⲟⲛ</em> «mais toi, si tu veux prier, entre dans ta chambre»<sup class="footnote">1</sup>.</p>
+	<p>Le plus souvent cependant, dans ces sortes de propositions, la condition est exprimée par <em>ⲉϣⲱⲡ</em> (391).</p>
+	<p>Une proposition conditionnelle très fréquente est celle qui est formée de <em>ⲉ-</em> et de l'imparfait <em>ⲛⲁⲣⲉ</em> (248) ou de l'auxiliaire <em>ⲛⲉ</em> avec <em>ⲟⲩⲟⲛ ⲙ̀ⲙⲟⲛ</em> (302), avec <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em> (363).</p>
+	<p>Elle énonce une condition qui n'est pas censée pouvoir se réaliser; c'est plutôt un souhait.</p>
+	<p>Dans la proposition principale qui vient au second rang, on emploie généralement l'imparfait du futur (243):</p>
+	<p><em>ⲉⲛⲁⲕⲭⲏ ⲙ̀ⲡⲁⲓⲙⲁ ⲛⲁⲣⲉ ⲡⲁⲥⲟⲛ ⲛⲁⲙⲟⲩ ⲁⲛ ⲡⲉ</em> «si tu avais été ici, mon frère ne serait pas mort»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲉⲛⲁⲣⲉ ⲡⲓⲛⲉⲃⲏⲓ ⲉⲙⲓ ⲛⲁϥⲛⲁⲣⲱⲓⲥ ⲡⲉ</em> «si le maître de la maison savait, il veillerait»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲉⲛⲉ ⲟⲩⲟⲛϣϫⲟⲙ</em> «s'il était possible»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲉⲛⲉ ⲫϯ ⲡⲉⲧⲉⲛⲓⲱⲧ ⲡⲉ ⲛⲁⲣⲉⲧⲉⲛⲛⲁⲙⲉⲛⲣⲓⲧ ⲡⲉ</em> «si Dieu était votre père, vous m'aimeriez»<sup class="footnote">5</sup>.</p>
+	<p><em>ⲉⲛⲉ ⲙ̀ⲙⲟⲛ ⲛⲁⲓⲛⲁϫⲟⲥ ⲛⲱⲧⲉⲛ ⲁⲛ</em> «sinon, je ne vous l'aurais pas dit»<sup class="footnote">6</sup>.</p>
+	<p class="footnote">1. Mt. 6, 6.</p>
+	<p class="footnote">2. Jean 11, 32.</p>
+	<p class="footnote">3. Mt. 24, 43.</p>
+	<p class="footnote">4. Mt. 24, 24.</p>
+	<p class="footnote">5. Jean 8, 42.</p>
+	<p class="footnote">6. Jean 14, 2.</p>
+	<p><i>2. Avec <em>ϣⲁⲛ</em>.</i></p>
+	<p><em>ϣⲁⲛ</em> s'emploie avec l'auxiliaire du 2<sup>e</sup> présent <em>ⲁⲣⲉ</em> pour exprimer une condition à venir; il précède la proposition principale:</p>
+	<p><em>ⲁⲕϣⲁⲛϫⲱⲟⲩ ϩⲗⲓ ⲛ̀ⲣⲱⲙⲓ ⲕⲭⲏ ⲥⲁⲃⲟⲗ</em> «si tu le dis à quelqu'un, tu es excommunié»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲁⲣⲉⲧⲉⲛϣⲁⲛϯϩⲟ ⲉⲣⲟⲓ ⲁⲛⲟⲕ ⲇⲉ ⲛ̀ⲛⲁⲥⲱⲧⲉⲙ ⲉⲣⲱⲧⲉⲛ</em> «si vous me priez, je ne vous écouterai pas»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲁⲣⲉ ϣⲁⲛ ⲟⲩⲁⲓ ⲙⲟⲩⲣ ⲛ̀ⲟⲩⲭⲣⲱⲙ ϧⲉⲛ ⲕⲉⲛϥ ⲙⲏ ϥⲛⲁⲣⲱⲕϩ ⲁⲛ ⲛ̀ⲛⲓ ϩⲃⲱⲥ</em> «si quelqu'un attache du feu à sa poitrine, est-ce qu'il ne brûlera pas ses habits?»<sup class="footnote">3</sup>.</p>
+	<p>Dans la proposition négative <em>ϣⲁⲛ</em> est remplacé par <em>ϣⲧⲉⲙ</em>:</p>
+	<p><em>ϯⲛⲁⲟⲩⲟⲣⲡⲕ ⲁⲛ ⲁⲕϣⲧⲉⲙ ⲥⲙⲟⲩ ⲉⲣⲟⲓ</em> «je ne te renverrai pas, si tu ne me bénis»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲁⲣⲉϣⲧⲉⲙ ⲫϯ ϣⲱⲡⲓ ⲛⲉⲙⲁϥ</em> «si Dieu n'est pas avec lui»<sup class="footnote">5</sup>.</p>
+	<p><i>3. Avec <em>ⲉϣⲱⲡ</em></i></p>
+	<p><em>ⲉϣⲱⲡ</em> employé seul exprime une condition, un cas qui peut arriver, une éventualité.</p>
+	<p>Il entre dans la proposition nominale:</p>
+	<p><em>ⲉϣⲱⲡ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲓⲉⲥⲱⲟⲩ ⲡⲉ ⲡⲉⲕⲇⲱⲣⲟⲛ</em> «si ton offrande est un mouton»<sup class="footnote">6</sup>.</p>
+	<p>Il s'emploie surtout avec le 3<sup>e</sup> présent, le 3<sup>e</sup> futur, le subjonctif:</p>
+	<p class="footnote">1. Kef. 411.</p>
+	<p class="footnote">2. Pr. 1, 28.</p>
+	<p class="footnote">3. Pr. 6, 27.</p>
+	<p class="footnote">4. Gen. 32, 26.</p>
+	<p class="footnote">5. Jean 3, 2.</p>
+	<p class="footnote">6. Lév. 1, 10.</p>
 	</div>
 </div>
 	</body>
