--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -12128,6 +12128,31 @@
 	<p class="footnote">4. Gen. 32, 26.</p>
 	<p class="footnote">5. Jean 3, 2.</p>
 	<p class="footnote">6. Lév. 1, 10.</p>
+	<p><em>ⲉϣⲱⲡ ⲉⲩⲥⲃⲱⲕ ⲛ̀ϫⲉ ⲛⲏ ⲉⲧϧⲉⲛ ⲡⲏⲓ</em> «si ceux qui sont dans la maison ne suffisent pas»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲉϣⲱⲡ ⲉⲕⲛⲁⲓ̀ⲛⲓ ⲛ̀ⲟⲩⲇⲱⲣⲟⲛ ⲉϧⲟⲩⲛ</em> «si tu présentes une offrande»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲉϣⲱⲡ ⲛ̀ⲧⲉ ⲡⲓⲁⲣⲭⲱⲛ ⲉⲣⲛⲟⲃⲓ</em> «si le prince vient à pécher<sup class="footnote">3</sup>.</p>
+	<p><i>4. Avec <em>ⲉϣⲱⲡ</em> et <em>ϣⲁⲛ</em>.</i></p>
+	<p>Le plus souvent les deux conjonctions sont employées ensemble:</p>
+	<p><em>ⲉϣⲱⲡ ⲁⲕϣⲁⲛⲓⲣⲓ ⲙ̀ⲡⲁⲓⲥⲁϫⲓ</em> «si tu fais cela»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲉϣⲱⲡ ⲁⲩϣⲁⲛϯϩⲟ ⲉⲣⲟⲕ</em> «si on te prie»<sup class="footnote">5</sup>.</p>
+	<p><i>5. Avec <em>ⲓⲥϫⲉ</em>.</i></p>
+	<p><em>ⲓⲥϫⲉ</em>, dans la proposition verbale, exprime une condition réelle représentée comme déjà accomplie. On pourrait le traduire par «puisque»:</p>
+	<p><em>ⲓⲥϫⲉ ⲁⲣⲉⲧⲉⲛⲕⲱϯ ⲛ̀ⲥⲱⲓ ⲭⲁ ⲛⲁⲓ ⲉⲃⲟⲗ ⲙⲁⲣⲟⲩϣⲉ ⲛⲱⲟⲩ</em> «si (puisque) c'est moi que vous cherchez, laissez aller ceux-ci»<sup class="footnote">6</sup>.</p>
+	<p>Dans la proposition nominale, il exprime une simple condition:</p>
+	<p><em>ⲓⲥϫⲉ ⲟⲩⲧⲉⲃⲛⲏ ⲡⲉ ⲓⲉ ⲟⲩⲣⲱⲙⲓ ⲡⲉ</em> «si c'est une bête ou un homme»<sup class="footnote">7</sup>.</p>
+	<p>Répété, <em>ⲓⲥϫⲉ</em> sépare les deux membres d'un dilemme:</p>
+	<p class="footnote">1. Ex. 12, 4.</p>
+	<p class="footnote">2. Lév. 2, 4.</p>
+	<p class="footnote">3. Lév. 4, 22.</p>
+	<p class="footnote">4. Ex. 12, 23.</p>
+	<p class="footnote">5. Pr. 1, 11.</p>
+	<p class="footnote">6. Jean 18, 8.</p>
+	<p class="footnote">7. Ex. 19, 13.</p>
+	<p><em>ⲓⲥϫⲉ ⲕⲁⲕⲱⲥ ⲁⲓⲥⲁϫⲓ</em> «si j'ai mal parlé», <i>donne la preuve du mal</i>;</p>
+	<p><em>ⲓⲥϫⲉ ⲇⲉ ⲕⲁⲗⲱⲥ</em> «mais si j'ai bien parlé», <i>pourquoi me frappes-tu?</i><sup class="footnote">1</sup></p>
+	<p>«Si non» se traduit par <em>ⲓⲥϫⲉ ⲙ̀ⲙⲟⲛ</em>, quelquefois par <em>ⲉϣⲱⲡ ⲙ̀ⲙⲟⲛ</em>, rarement par <em>ⲙ̀ⲙⲟⲛ</em> seul.</p>
+	<p>Chapitre XXII.</p>
+	<p>Proposition Temporelle.</p>
 	</div>
 </div>
 	</body>
