--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -12153,6 +12153,67 @@
 	<p>«Si non» se traduit par <em>ⲓⲥϫⲉ ⲙ̀ⲙⲟⲛ</em>, quelquefois par <em>ⲉϣⲱⲡ ⲙ̀ⲙⲟⲛ</em>, rarement par <em>ⲙ̀ⲙⲟⲛ</em> seul.</p>
 	<p>Chapitre XXII.</p>
 	<p>Proposition Temporelle.</p>
+	<p>La proposition temporelle est une proposition dépendante qui exprime une circonstance ou une action ayant lieu en <i>même temps</i> que celle de la proposition principale. Elle correspond aux propositions françaises commençant par «lorsque, tandis que, comme».</p>
+	<p>Elle peut précéder ou suivre la proposition principale dont elle dépend. Elle se construit sans ou avec conjonction.</p>
+	<p><i>1. Sans conjonction.</i></p>
+	<p>Le 3<sup>e</sup> présent et le 3<sup>e</sup> futur forment par eux-mêmes des propositions temporelles:</p>
+	<p><em>ⲉϥⲟⲓ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ ⲛⲁϥⲁⲙⲟⲛⲓ ⲛ̀ⲛⲓⲉⲥⲱⲟⲩ ⲛ̀ⲧⲉ ⲡⲉϥⲓⲱⲧ</em> «lorsqu'il était petit, il gardait les moutons de son père»<sup class="footnote">2</sup>.</p>
+	<p class="footnote">1. Jean 18, 23.</p>
+	<p class="footnote">2. Kef. 334.</p>
+	<p><em>ⲛⲁⲓ ⲉϥϫⲱ ⲙ̀ⲙⲱⲟⲩ ϩⲁⲛⲙⲏϣ ⲁⲩⲛⲁϩϯ ⲉⲣⲟϥ</em> «tandis qu'il disait ces choses, beaucoup crurent en lui»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲁⲥϣⲱⲡⲓ ⲉⲩⲭⲏ ϧⲉⲛ ⲧⲕⲟⲓ ⲁϥⲧⲱⲛϥ</em> «il arriva, comme ils étaient à la compagne, qu'il se leva»<sup class="footnote">2</sup>.</p>
+	<p><i>Pourquoi n'es-tu pas venu célébrer notre meurtre</i> <em>ⲉⲩⲛⲁϣⲁⲧⲉⲛ ⲙ̀ⲡⲉⲕⲛⲟⲩϯ</em> «lorsqu'on allait nous immoler à ton dieu?»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲉⲣⲉ ⲫⲣⲏ ⲇⲉ ⲛⲁϩⲱⲧⲡ ⲟⲩⲧⲱⲙⲧ ⲁϥⲓ̀ ⲉϫⲉⲛ ⲁⲃⲣⲁⲙ</em> «comme le soleil allait se coucher, Abraham fut saisi d'étonnement»<sup class="footnote">4</sup>.</p>
+	<p>Le 2<sup>e</sup> parfait forme généralement une proposition temporelle (245, 3).</p>
+	<p>La proposition conditionnelle formée de <em>ϣⲁⲛ</em> exprime souvent une condition de temps:</p>
+	<p><em>ⲧⲉⲛⲛⲁϣⲉ ⲛⲁⲛ ϣⲁ ⲙ̀ⲛⲁⲓ ⲟⲩⲟϩ ⲁⲛϣⲁⲛⲟⲩⲱϣⲧ ⲧⲉⲛⲛⲁⲧⲁⲥⲑⲟ ϩⲁⲣⲱⲧⲉⲛ</em> «nous irons là-bas et, lorsque nous aurons adoré, nous reviendrons vers vous»<sup class="footnote">5</sup>.</p>
+	<p><i>2. Avec <em>ⲓⲥϫⲉⲛ</em>.</i></p>
+	<p>La préposition <em>ⲓⲥϫⲉⲛ</em> «depuis» s'emploie avec le 3<sup>e</sup> présent et le 2<sup>e</sup> parfait pour traduire la locution conjonctive «depuis que».</p>
+	<p><em>ⲓⲥϫⲉⲛ ⲉⲓϧⲉⲛ ⲧⲟϯ</em> «depuis que j'étais dans le sein (de ma mère)»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲓⲥϫⲉⲛ ⲉⲧⲁⲓⲛⲁⲩ</em> «depuis que j'ai vu»<sup class="footnote">7</sup>.</p>
+	<p class="footnote">1. Jean 8, 30.</p>
+	<p class="footnote">2. Gen. 4, 8.</p>
+	<p class="footnote">3. MS. 424.</p>
+	<p class="footnote">4. Gen. 15, 12.</p>
+	<p class="footnote">5. Gen. 22, 5.</p>
+	<p class="footnote">6. Ps. 21, 11.</p>
+	<p class="footnote">7. MS. 399.</p>
+	<p><em>ⲓⲥϫⲉⲛ</em> s'emploie aussi avec <em>ⲙ̀ⲡⲁⲧⲉ</em> pour signifier «avant que» dans le passé:</p>
+	<p><em>ⲓⲥϫⲉⲛ ⲙ̀ⲡⲁⲧⲟⲩⲉⲣⲃⲟⲕⲓ ⲙ̀ⲙⲟϥ</em> «avant qu'il ne fût conçu»<sup class="footnote">1</sup>.</p>
+	<p>Dans le même sens on emploie <em>ϧⲁⲧϩⲏ ⲙ̀ⲡⲁⲧⲉ</em>:</p>
+	<p><em>ϧⲁⲧϩⲏ ⲙ̀ⲡⲁⲧⲉϥϭⲓⲥϩⲓⲙⲓ</em> «avant de se marier»<sup class="footnote">2</sup>.</p>
+	<p><i>3. Avec des conjonctions grecques.</i></p>
+	<p>Les principales conjonctions grecques de temps employées en copte sont:</p>
+	<p>1. <em>ϩⲱⲥ</em> (<em>ὡς</em>) «tandis que, tant que», <em>ϩⲟⲥⲟⲛ</em>, <em>ⲉⲫⲟⲥⲟⲛ</em> (<em>ὅσον</em>, <em>ἐφ'ὅσον</em>) «comme, tant que».</p>
+	<p>Ces conjonctions s'emploient surtout avec le 3<sup>e</sup> présent:</p>
+	<p><em>ϩⲱⲥ ⲉⲕⲭⲏ ⲛⲉⲙⲁϥ</em> «tant que tu es avec lui»<sup class="footnote">3</sup>.</p>
+	<p><em>ϩⲟⲥⲟⲛ ⲉⲩⲭⲏ ϧⲉⲛ ⲡⲓⲉⲣⲫⲉⲓ</em> «comme ils étaient dans le temple»<sup class="footnote">4</sup>.</p>
+	<p><em>ϩⲟⲥⲟⲛ ⲉⲣⲉ ⲡⲓⲣⲉϥⲙⲱⲟⲩⲧ ⲟϩⲓ ⲉⲣⲁⲧϥ ϩⲓⲣⲉⲛ ⲫⲣⲟ ⲙ̀ⲡⲓⲙ̀ϩⲁⲩ ⲁⲥϣⲱⲡⲓ ⲛ̀ϫⲉ ⲟⲩⲥⲙⲏ</em> «comme le mort se tenait debout à la porte du tombeau, une voix se fit entendre»<sup class="footnote">5</sup>.</p>
+	<p>2. <em>ϩⲟⲧⲉ</em>, <em>ϩⲟⲧⲁⲛ</em> (<em>ὅτε</em>, <em>ὅταν</em>) «quand, lorsque».</p>
+	<p><em>ϩⲟⲧⲉ</em> s'emploie surtout avec un temps second (3<sup>e</sup> prés., 3<sup>e</sup> fut., 2<sup>e</sup> parfait):</p>
+	<p><em>ϩⲟⲧⲉ ⲉϥϯϩⲟ ⲉⲣⲟⲛ ⲙ̀ⲡⲉⲛⲥⲱⲧⲉⲙ ⲉⲣⲟϥ</em> «lorsqu'il nous prie, nous ne l'écoutons pas»<sup class="footnote">6</sup>.</p>
+	<p class="footnote">1. Luc 2, 21.</p>
+	<p class="footnote">2. Z. 61.</p>
+	<p class="footnote">3. Mt. 5, 25.</p>
+	<p class="footnote">4. AM. 15.</p>
+	<p class="footnote">5. HM. 227.</p>
+	<p class="footnote">6. Gen. 42, 21.</p>
+	<p><em>ⲫⲁⲓ ⲡⲉ ⲡⲓϫⲱⲙ ⲛ̀ⲑⲁⲙⲓⲟ ⲛ̀ⲧⲫⲉ ⲛⲉⲙ ⲡⲕⲁϩⲓ ϩⲟⲧⲉ ⲉⲧⲁϥϣⲱⲡⲓ</em> «voici le livre de la création du ciel et de la terre, lorsqu'ils furent (créés)»<sup class="footnote">1</sup>.</p>
+	<p>Au lieu de <em>ϩⲟⲧⲉ</em> on trouve rarement <em>ⲉⲛⲟⲓⲥ</em> (<em>ἐν οἷς</em>):</p>
+	<p><em>ⲉⲛⲟⲓⲥ ⲉⲧⲁⲩⲑⲱⲟⲩϯ ⲁϥⲉⲣϩⲏⲧⲥ ⲛ̀ϫⲟⲥ</em> «quand ils se furent réunis, il commença à dire»<sup class="footnote">2</sup>.</p>
+	<p><em>ϩⲟⲧⲁⲛ</em> est généralement suivi du conditionnel:</p>
+	<p><em>ⲛⲓⲙ ⲉⲧⲛⲁϣⲱⲛϧ ϩⲟⲧⲁⲛ ⲁⲣⲉϣⲁⲛ ⲫⲛⲟⲩϯ ϯ ⲛ̀ⲛⲁⲓ</em> «qui pourra vivre, lorsque Dieu aura donné ces choses?»<sup class="footnote">3</sup>.</p>
+	<p><em>ϩⲟⲧⲁⲛ ⲁⲓϣⲁⲛϩⲓⲟⲩⲓ ⲛ̀ϩⲁⲛⲉⲑⲛⲟⲥ ⲉⲃⲟⲗ</em> «lorsque je chasserai les étrangers»<sup class="footnote">4</sup>.</p>
+	<p>On trouve aussi <em>ϩⲱⲥⲧⲉ</em>, <em>ϩⲟⲥⲧⲉ</em> (<em>ὡς δε</em>), dans le sens de «comme, lorsque», avec le 2<sup>e</sup> parfait:</p>
+	<p><em>ϩⲱⲥⲧⲉ ⲉⲧⲁϥϧⲱⲛⲧ ⲉ ϯⲡⲩⲗⲏ</em> «comme il se fut approché de la porte»<sup class="footnote">5</sup>.</p>
+	<p><em>ϩⲟⲥⲧⲉ ⲉⲧⲁϥϫⲉⲙ ϯⲡⲓ ⲙ̀ⲡⲓⲙⲱⲟⲩ</em> «lorsqu'il eut goûté l'eau»<sup class="footnote">6</sup>.</p>
+	<p>Pour l'expression de la proposition temporelle au moyen de l'infinitif et de <em>ⲙⲉⲛⲉⲛⲥⲁ</em>, voir 265; au moyen du substantif verbal et de <em>ϧⲉⲛ</em>, voir 274, 275.</p>
+	<p class="footnote">1. Gen. 2, 4.</p>
+	<p class="footnote">2. Luc 21, 1.</p>
+	<p class="footnote">3. Nomb. 24, 23.</p>
+	<p class="footnote">4. Ex. 23, 18.</p>
+	<p class="footnote">5. Luc 7, 12.</p>
+	<p class="footnote">6. Jean 2, 9.</p>
 	</div>
 </div>
 	</body>
