--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21019,5 +21019,190 @@
 			<p>Le mot correspondant à <em>-ⲑⲏⲛⲟⲩ</em> boḥairique est <em>-ⲧⲏⲩⲧⲛ̄</em>: <em>ϩⲏⲧ-ⲧⲏⲩⲧⲛ̄</em> «votre cœur». </p>
 			<p>Ces pronoms s'emploient comme en boḥairique. Exemple <em>ⲉ- ⲉⲣⲟ⸗</em> «vers, à», <em>ⲛ̄ ⲛ⸗</em> «à», <em>ⲣⲁⲧ⸗</em> «pied». </p>
 		</div>
+		<div id="liste_de_textes">
+  <p>Liste des Textes.</p>
+  <p>I. Textes boḥairiques.</p>
+  <table>
+    <tr>
+      <th></th><th></th><th>Pages.</th>
+    </tr>
+    <tr>
+      <td>1.</td><td>Histoire de Joseph (Genèse XXXIX–XLV).</td><td>1</td>
+    </tr>
+    <tr>
+      <td>2.</td><td>Le Concile d'Éphèse d'après une lettre de Saint Cyrille.</td><td>36</td>
+    </tr>
+    <tr>
+      <td>3.</td><td>La Sainte Famille en Égypte.</td><td>38</td>
+    </tr>
+    <tr>
+      <td>4.</td><td>Les deux marchands.</td><td>40</td>
+    </tr>
+    <tr>
+      <td>5.</td><td>Extrait de l'éloge d'un Évêque de Keft.</td><td>43</td>
+    </tr>
+    <tr>
+      <td>6.</td><td>Extrait des mémoires de Dioscore.</td><td>55</td>
+    </tr>
+    <tr>
+      <td>7.</td><td>Le voleur converti.</td><td>64</td>
+    </tr>
+    <tr>
+      <td>8.</td><td>Panégyrique de Saint Pierre d'Alexandrie.</td><td>68</td>
+    </tr>
+    <tr>
+      <td>9.</td><td>Paraphrase du Pater.</td><td>77</td>
+    </tr>
+    <tr>
+      <td>10.</td><td>Panégyrique de Saint Michel Archange.</td><td>81</td>
+    </tr>
+    <tr>
+      <td>11.</td><td>Martyre de Saint Macaire d'Antioche.</td><td>86</td>
+    </tr>
+  </table>
+  <p>II. Textes des différents dialectes.</p>
+  <table>
+    <tr>
+      <td>1.</td><td>Principales différences des Dialectes entr'eux.</td><td>113</td>
+    </tr>
+    <tr>
+      <td>2.</td><td>Zacharie V, 1–11. (Boḥairique, ṣaꜥidique, achmimique).</td><td>116</td>
+    </tr>
+    <tr>
+      <td>3.</td><td>Isaïe I, 1–6. (Boḥairique, ṣaꜥidique, fayoumique).</td><td>122</td>
+    </tr>
+    <tr>
+      <td>4.</td><td>Isaïe XXXIII, 1–11. (Boḥairique, memphitique).</td><td>125</td>
+    </tr>
+    <tr>
+      <td>5.</td><td>Lettres en ṣaꜥidique.</td><td>129</td>
+    </tr>
+    <tr>
+      <td></td><td>Lettre de Paphnuce.</td><td>129</td>
+    </tr>
+    <tr>
+      <td></td><td>Lettre d'Azarias.</td><td>130</td>
+    </tr>
+    <tr>
+      <td></td><td>Lettre de Sévère.</td><td>130</td>
+    </tr>
+    <tr>
+      <td>6.</td><td>Inscriptions.</td><td>131</td>
+    </tr>
+    <tr>
+      <td></td><td>Eclipse de soleil.</td><td>131</td>
+    </tr>
+    <tr>
+      <td></td><td>Epitaphe.</td><td>131</td>
+    </tr>
+    <tr>
+      <td></td><td>Stèles du musée d'Alexandrie.</td><td>132</td>
+    </tr>
+    <tr>
+      <td></td><td>N° 280.</td><td>132</td>
+    </tr>
+    <tr>
+      <td></td><td>N° 295.</td><td>133</td>
+    </tr>
+    <tr>
+      <td></td><td>N° 197.</td><td>133</td>
+    </tr>
+  </table>
+</div>
+		<div id="additions_et_corrections">
+  <p>Additions et Corrections.</p>
+  <table>
+    <tr>
+      <th>page</th><th>ligne</th><th></th>
+    </tr>
+    <tr>
+      <td>15,</td><td>13:</td><td><em>ⲉ-ⲣⲱ-ⲧⲉⲙ</em>, lire <em>ⲉ-ⲣⲱ-ⲧⲉⲛ</em>.</td>
+    </tr>
+    <tr>
+      <td>206,</td><td>16:</td><td>ajoutez <em>ⲕⲟⲣϥ⸗</em> (Chrest. p. 84, l. 10).</td>
+    </tr>
+  </table>
+  <p>Dans la Chrestomathie:</p>
+  <table>
+    <tr>
+      <th>page</th><th>ligne</th><th></th>
+    </tr>
+    <tr>
+      <td>5,</td><td>14:</td><td><em>ⲛⲓⲥⲓⲟⲩⲣⲃ</em>, lire <em>ⲛⲓⲥⲓⲟⲩⲣⲃ̅</em>.</td>
+    </tr>
+    <tr>
+      <td>16,</td><td>7:</td><td><em>ϣⲱⲡⲓⲛⲁϥ</em>, lire <em>ϣⲱⲡⲓ ⲛⲁϥ</em>.</td>
+    </tr>
+    <tr>
+      <td>49,</td><td>2:</td><td><em>ⲉⲩⲥⲟⲛ</em>, lire <em>ⲉⲩⲥⲟⲡ</em>.</td>
+    </tr>
+    <tr>
+      <td>58,</td><td>13:</td><td><em>ⲙ̀ⲫⲏⲉⲧ</em>, lire <em>ⲙ̀ⲫⲏ</em>.</td>
+    </tr>
+    <tr>
+      <td>59,</td><td>1:</td><td><em>ϫⲉϥⲟⲛϧ</em>, lire <em>ϫⲉ ϥⲟⲛϧ</em>.</td>
+    </tr>
+    <tr>
+      <td>61,</td><td>18:</td><td><em>ⲟⲑⲟⲣⲁⲃ</em>, lire <em>ⲉⲑⲟⲩⲁⲃ</em>.</td>
+    </tr>
+    <tr>
+      <td>67,</td><td>8:</td><td><em>ⲙⲉⲡⲉⲛⲥⲁ</em>, lire <em>ⲙⲉⲛⲉⲛⲥⲁ</em>.</td>
+    </tr>
+    <tr>
+      <td>69,</td><td>6:</td><td><em>ⲉⲓϩⲓⲟⲓ</em>, lire <em>ⲉϩⲓⲟⲓ</em>.</td>
+    </tr>
+    <tr>
+      <td>—,</td><td>9:</td><td><em>ⲡⲓⲁⲥⲉⲃⲏⲥ</em>, lire <em>ⲛⲓⲁⲥⲉⲃⲏⲥ</em>.</td>
+    </tr>
+    <tr>
+      <td>74,</td><td>6:</td><td><em>ϯⲁⲛⲧⲟⲗⲏ</em>, lire <em>ϯⲁⲛⲁⲧⲟⲗⲏ</em>.</td>
+    </tr>
+    <tr>
+      <td>75,</td><td>5:</td><td><em>ⲧⲉⲛⲛⲁⲛϩϯ</em>, lire <em>ⲧⲉⲛⲛⲁⲛⲁϩϯ</em>.</td>
+    </tr>
+    <tr>
+      <td>82,</td><td>17:</td><td><em>ⲛⲓⲥⲏⲟⲩⲧⲱⲟⲩⲛ</em>, lire <em>ⲛⲓⲑⲏⲟⲩ ⲧⲱⲟⲩⲛ</em>.</td>
+    </tr>
+    <tr>
+      <td>83,</td><td>19, 21:</td><td><em>ⲛⲓⲁⲃⲓⲛ</em>, lire <em>ⲡⲓⲁⲃⲓⲛ</em>.</td>
+    </tr>
+    <tr>
+      <td>87,</td><td>4:</td><td><em>ⲛⲓϩⲏⲅⲉⲙⲱⲛ</em>, lire <em>ⲡⲓϩⲏⲅⲉⲙⲱⲛ</em>.</td>
+    </tr>
+    <tr>
+      <td>94,</td><td>6:</td><td><em>ⲡⲓϩⲏⲅⲥⲙⲱⲛ</em>, lire <em>ⲡⲓϩⲏⲅⲉⲙⲱⲛ</em>.</td>
+    </tr>
+    <tr>
+      <td>97,</td><td>11:</td><td><em>ⲏⲁⲥⲱⲙⲁ</em>, lire <em>ⲡⲁⲥⲱⲙⲁ</em>.</td>
+    </tr>
+    <tr>
+      <td>100,</td><td>11:</td><td><em>ⲥⲑⲟⲩⲁⲃ</em>, lire <em>ⲉⲑⲟⲩⲁⲃ</em>.</td>
+    </tr>
+    <tr>
+      <td>—,</td><td>16:</td><td><em>ϣⲱⲏⲓ</em>, lire <em>ϣⲱⲡⲓ</em>.</td>
+    </tr>
+    <tr>
+      <td>103,</td><td>1:</td><td><em>ⲉⲛⲓⲇⲏ</em>, lire <em>ⲉⲡⲓⲇⲏ</em>.</td>
+    </tr>
+    <tr>
+      <td>104,</td><td>5:</td><td>devant <em>ⲡⲓϫⲟⲓ</em> mettre <em>ⲉ</em>.</td>
+    </tr>
+    <tr>
+      <td>106,</td><td>11:</td><td><em>ⲟⲓⲕⲟⲩⲙⲉⲛⲡ</em>, lire <em>ⲟⲓⲕⲟⲩⲙⲉⲛⲏ</em>.</td>
+    </tr>
+    <tr>
+      <td>—,</td><td>12:</td><td><em>ⲛⲁⲓⲅⲓⲟⲥ</em>, lire <em>ⲛⲓⲁⲅⲓⲟⲥ</em>.</td>
+    </tr>
+    <tr>
+      <td>107,</td><td>19, 20:</td><td><em>ϣⲏⲁⲓ</em>, lire <em>ϣⲏⲣⲓ</em>.</td>
+    </tr>
+    <tr>
+      <td>108,</td><td>13:</td><td><em>ⲉⲣϣⲓϣ</em>, lire <em>ⲉⲣϣⲓϣⲓ</em>.</td>
+    </tr>
+    <tr>
+      <td>109,</td><td>8:</td><td><em>ⲁⲣ-</em>, lire <em>ⲁϥ-</em>.</td>
+    </tr>
+  </table>
+</div>
 	</body>
 </html>
