--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -21019,6 +21019,18 @@
 			<p>Le mot correspondant à <em>-ⲑⲏⲛⲟⲩ</em> boḥairique est <em>-ⲧⲏⲩⲧⲛ̄</em>: <em>ϩⲏⲧ-ⲧⲏⲩⲧⲛ̄</em> «votre cœur». </p>
 			<p>Ces pronoms s'emploient comme en boḥairique. Exemple <em>ⲉ- ⲉⲣⲟ⸗</em> «vers, à», <em>ⲛ̄ ⲛ⸗</em> «à», <em>ⲣⲁⲧ⸗</em> «pied». </p>
 		</div>
+		<div id="petit_exercise">
+  <p>Petit exercice.</p>
+  <p>Fragment de l'évangile des douze Apôtres<sup class="footnote">1</sup>.</p>
+  <p>1. <em>ⲁⲧⲉⲧⲉⲛⲛⲁⲩ ⲱ ⲛⲁⲙⲉⲣⲁⲧⲉ ⲉⲡⲙⲉ ⲛⲓⲥ ⲉϩⲟⲩⲛ ⲉⲛⲉϥⲁⲡⲟⲥⲧⲟⲗⲟⲥ. ⲉⲃⲟⲗϫⲉ ⲙⲡⲉϥϩⲉⲡ ⲗⲁⲁⲩ ⲉⲣⲟⲟⲩ.</em></p>
+  <p>2. <em>ⲟⲩⲥⲟⲡ. ϩⲉⲙ ⲡⲉⲥⲙⲟⲩ ⲙⲡϯⲟⲩ ⲛⲟⲉⲓⲕ ⲛⲓⲱⲧ. ⲟⲩⲥⲟⲡ. ϩⲉⲙ ⲡϣⲉⲡϩⲙⲟⲧ ⲙⲡⲉϥⲉⲓⲱⲧ. ⲟⲩⲥⲟⲡ. ϩⲉⲙ ⲡϣⲉⲡϩⲙⲟⲧ ⲙⲡⲥⲁϣϥ ⲛⲟⲉⲓⲕ.</em></p>
+  <p>3. <em>ⲡⲉϫⲉ ⲑⲱⲙⲁⲥ ⲛⲓⲥ ϫⲉ ⲡⲁϫⲟⲉⲓⲥ ⲉⲓⲥ ϩⲙⲟⲧ ⲛⲓⲙ ⲁⲕⲁⲁⲩ ⲛⲙⲙⲁⲛ ϩⲉⲛ ⲧⲉⲕⲙⲛⲧⲁⲅⲁⲑⲟⲥ.</em></p>
+  <p class="footnote">1. Les Apocryphes coptes. Les évangiles des douze Apôtres et de S. Barthélemy (Patrologia orientalis, tome II, fasc. 2), par E. Révillout. Paris 1904; p. 135). — Tous les accents ont été volontairement omis dans l'édition de ce texte; nous l'avons reproduit tel quel.</p>
+  <p>4. <em>ⲟⲩϩⲱⲃ ⲛⲟⲩⲱⲧ ⲡⲉ ⲉⲛⲟⲩⲱϣ ⲉⲧⲣⲉⲕⲡⲓⲑⲏ ⲙⲙⲟⲛ ⲉⲣⲟϥ. ⲉⲛⲟⲩⲱϣ ⲱ ⲡⲁϫⲟⲉⲓⲥ ⲉⲧⲣⲉⲛⲛⲁⲩ ⲉϩⲉⲛⲣⲉϥⲙⲟⲟⲩⲧ ⲉⲩⲉⲛⲕⲟⲧⲕ ϩⲉⲛ ⲛⲉⲧⲁⲫⲟⲥ ⲉⲁⲕⲧⲟⲩⲛⲁⲥⲟⲩ.</em></p>
+  <p>5. <em>ⲉⲩⲙⲁⲉⲓⲛ ⲛⲧⲉⲕⲁⲛⲁⲥⲧⲁⲥⲓⲥ ⲉⲧⲛⲁϣⲱⲡⲉ. ⲙⲙⲟⲛ. ⲧⲉⲛⲥⲟⲟⲩⲛ ⲱ ⲡⲉⲛϫⲟⲉⲓⲥ ϫⲉ ⲁⲕⲧⲟⲩⲛⲉⲥ ⲡϣⲏⲣⲉ ⲛⲧⲉⲭⲏⲣⲁ ϩⲉⲛ ⲛⲁⲉⲓⲛ. ⲁⲗⲗⲁ ⲟⲩⲉⲧ ⲧⲉϣⲡⲏⲣⲉ ⲙⲡⲛⲁⲩ ⲉⲧⲉⲙⲙⲁⲩ.</em></p>
+  <p>6. <em>ϫⲉ ⲛⲧⲁⲕϩⲉ ⲉⲣⲟⲟⲩ ⲉⲩⲙⲟⲟϣⲉ ⲛⲉⲙⲙⲁϥ ϩⲓ ⲧⲉϩⲓⲏ. ⲉⲛⲟⲩⲱϣ ⲉⲛⲁⲩ ⲉϩⲉⲛⲕⲉⲉⲥ ϩⲉⲛ ⲡⲉⲓⲧⲁⲫⲟⲥ ⲛⲧⲁⲩⲃⲱⲗ ⲉⲃⲟⲗ. ϫⲉ ϣⲁⲩⲧⲱϭⲉ ⲉⲛⲉⲩⲉⲣⲏⲩ ⲛⲁϣ ⲛϩⲉ ⲛⲥⲉϣⲁϫⲉ ϩⲉⲙ ⲡⲉⲓⲙⲁ.</em></p>
+  <p>7. <em>ⲡⲉϫⲉ ⲓⲥ ⲛⲑⲱⲙⲁⲥ ϫⲉ ⲑⲱⲙⲁⲥ ⲡⲁϣⲃⲏⲣ ϣⲓⲛⲉ ⲙⲙⲟⲓ ⲙⲉⲛ ⲛⲉⲕⲥⲛⲏⲩ ⲉⲧⲃⲉ ϩⲱⲃ ⲛⲓⲙ ⲉⲕⲉⲡⲓⲑⲩⲙⲉⲓ ⲉⲣⲟϥ. ⲁⲩⲱ ⲛϯⲛⲁϩⲉⲡ ⲗⲁⲁⲩ ⲉⲣⲱⲧⲉⲛ ⲁⲛ. ϫⲉ ⲙⲱⲅⲓⲥ ⲛⲅⲛⲁⲩ. ⲁⲩⲱ ⲛⲅϭⲟⲙϭⲉⲙ ⲛⲧⲉ ⲡⲉⲕϩⲏⲧ ⲧⲁϫⲣⲟ. ⲉϣϫⲉ ⲁⲕⲉⲡⲓⲑⲩⲙⲉⲓ ⲛⲛⲁⲩ ⲉⲛⲉⲧ ϩⲉⲛ ⲛⲉⲧⲁⲫⲟⲥ ⲉⲁⲩⲧⲱⲟⲩⲛ. ⲕⲁⲗⲱⲥ ⲙⲉⲛ ⲁⲕϣⲓⲛⲉ ⲛⲥⲁ ⲟⲩⲙⲁⲉⲓⲛ ⲛⲁⲛⲁⲥⲧⲁⲥⲓⲥ. ⲁⲓⲟⲩⲱ ⲅⲁⲣ ⲉϫⲱ ⲙⲙⲟⲥ ⲉⲣⲱⲧⲛ ϫⲉ ⲁⲛⲟⲕ ⲡⲉ ⲧⲁⲛⲁⲥⲧⲁⲥⲓⲥ ⲁⲩⲱ ⲡⲱⲛⲁϩ.</em></p>
+</div>
 		<div id="liste_de_textes">
   <p>Liste des Textes.</p>
   <p>I. Textes boḥairiques.</p>
